# spicy-rvvm

./: Cargo.toml  LICENSE  README.md  riscv-example
.cargo/: config
riscv-example/: Cargo.toml
riscv-example/src/: main.rs
spicy-rvvm/: Cargo.toml
spicy-rvvm/src/: main.rs
src/: core.rs  error.rs  input.rs  isa.rs  main.rs  runtime.rs
src/isa/: i.rs
